ini dari gw dek

--- a/index.html
+++ b/index.html
@@ -25,11 +25,12 @@
     <div class="content">
         <h1>Dashboard</h1>
 
-        <div id="box-satuduatiga">
-            <div id="box1">Jumlah siswa</div>
-            <div id="box2">Masuk</div>
-            <div id="box3">Izin</div>
-            <div id="box3">Alpa</div>
+       <div id="box-satuduatiga">
+          <div id="total">Jumlah siswa</div>
+          <div id="hadir">Masuk</div>
+          <div id="izin">Izin</div>
+          <div id="sakit">sakit</div>
+          <div id="alpa">Alpa</div>
         </div>
 
 
@@ -41,8 +42,9 @@
     </div>
 
 
-    <script src="script.js"></script>
-    <script src="./data_siswa/data.js"></script>
+<script src="./data_siswa/data.js"></script>
+<script src="script.js"></script>
+
 </body>
 
 </html>
