--- a/dashboard_page/index.html
+++ b/dashboard_page/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Absensi Mahasiswa</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/dashboard_page/style.css">
 </head>
 
 <body>
@@ -16,8 +16,8 @@
             <li><a href="#">Dashboard</a></li>
             <li><a href="#">Materi</a></li>
             <li><a href="#">Soal</a></li>
-            <li><a href="#">Profil</a></li>
-            <li><a href="#">Keluar</a></li>
+            <li><a href="/profile_page/index.html">Profil</a></li>
+            <li><a href="/auth_page/index.html">Keluar</a></li>
         </ul>
     </div>
 
@@ -42,8 +42,8 @@
     </div>
 
 
-<script src="./data_siswa/data.js"></script>
-<script src="script.js"></script>
+<script src="/data_siswa/data.js"></script>
+<script src="/script.js"></script>
 
 </body>
 
